@@ -6029,7 +6029,7 @@
             "url-android": null,
             "url-ios": null,
             "arch": "i386,amd64",
-            "releases": "xenial,yakkety,zesty",
+            "releases": "xenial,yakkety,zesty,artful",
             "pre-install": {
                 "all": {
                     "method": "ppa",
