@@ -14,7 +14,8 @@
             "git-cola": "general",
             "veracrypt": "add-source",
             "nextcloud-client": "add-source",
-            "brackets": "add-source"
+            "brackets": "add-source",
+            "razor-drivers": "add-source"
         }
    },
     "17.10.6": {
