@@ -3,7 +3,8 @@ ubuntu-mate-welcome (17.10.7) UNRELEASED; urgency=medium
   * Update 0 A.D and Caffeine for Zesty.
   * Update Ambient Noise for Zesty and Artful.
   * Update Atom, Brackets, Brave, LibreOffice, Luminance-HDR, Nextcloud
-    Client, Peek, Play on Linux Solaar and Veracrypt for Artful.
+    Client, Peek, Play on Linux, Razer Drivers, Solaar and Veracrypt
+    for Artful.
 
  -- Martin Wimpress <martin@ubuntu-mate.org>  Tue, 20 Jun 2017 10:32:47 +0100
 
